Bug 153142 - Web Shortcuts delimiter stuck as colon
Summary: Web Shortcuts delimiter stuck as colon
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 152630 152753 155443 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-11-29 20:11 UTC by Barry Schatz
Modified: 2009-02-06 21:39 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Workaround for this bug (1.51 KB, patch)
2008-01-30 21:20 UTC, Fredy Yanardi
Details
Workaround for KDE4.1 (522 bytes, patch)
2008-07-29 19:13 UTC, Bastien Jansen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Barry Schatz 2007-11-29 20:11:34 UTC
Version:           3.96.00 (using KDE KDE 3.95.0)
Installed from:    Debian testing/unstable Packages
Compiler:          gcc 4.x (probably 4.1) 
OS:                Linux

In the Konqueror settings, under Web Shortcuts, there is a drop-down to select the delimiter for web shortcuts. I can select a space as the delimiter and click apply, but the setting isn't saved past that. After closing the settings, nothing has changed. The web shortmuts still expect a colon and not a space. Reopening the settings shows that colon is still selected. 

I am using the KDE4 beta packages in Debian experimental.
Comment 1 Josh Berry 2007-12-03 10:05:43 UTC
I can confirm this on a recent KDE4 SVN build.
Comment 2 Pjotter Tommassen 2007-12-19 11:24:07 UTC
Same here, using the SVN snapshot packages from OpenSUSE; the last update I performed was on 18 december.
Comment 3 Pjotter Tommassen 2007-12-19 11:37:41 UTC
And a quick update..

Manually changing the configuration file does work:
The share/config/kuriikwsfilterrc has a line that says either:
KeywordDelimiter=: or KeywordDelimiter=\s

The \s is given when the setting is changed to 'space', but this doesn't work; when it is manually changed to KeywordDelimiter=32, space does work as a delimiter, and the settings dialog actually says that it has been changed to 'space'.

This seems to suggest that either the setting is wrongly written to the configuration file, or that it incorrectly interprets the \s.

Hope this helps.
Comment 4 Thiago Macieira 2007-12-20 19:24:10 UTC
Must change the UI. Space is not a valid possibility because it breaks krunner (minicli in KDE3).
Comment 5 Josh Berry 2007-12-22 18:27:59 UTC
I would really like it if space would work again.  Space is nice precisely *because* it looks like a command.  (I have shell aliases setup to do the same things as my web shortcuts, for example.)  Also, it has the distinct advantage over ':' of not having to use the Shift key at all in most cases.
Comment 6 Camilla Boemann 2007-12-29 01:51:01 UTC
*** Bug 152753 has been marked as a duplicate of this bug. ***
Comment 7 Thomas Schildknecht 2008-01-14 19:19:30 UTC
152630 is a duplicate of this bug.

I second comment #5 from Josh Berry : "space" as a delimiter is quick to type and looks like a standard command

Comment 8 Tommi Tervo 2008-01-15 09:29:34 UTC
*** Bug 152630 has been marked as a duplicate of this bug. ***
Comment 9 Fredy Yanardi 2008-01-30 21:20:18 UTC
Created attachment 23374 [details]
Workaround for this bug

After trying to debug this bug, I found the problem is not in the kurifilter
module, but somewhere in the KConfig.

Attached is a proposed workaround for this problem.
Comment 10 Andrey 2008-02-01 16:21:56 UTC
I have the same bug on KDE trunk compiled from Gentoo overlay. 
Comment 11 András Manţia 2008-02-09 22:57:57 UTC
SVN commit 773002 by amantia:

Make it possible to use SPACE as delimiter, like in KDE3 (we had the GUI, it just did not work).
":" works, even if SPACE is selected, so krunner will still work.

BUG:153142

 M  +2 -1      ikwsopts.cpp  
 M  +1 -1      kuriikwsfiltereng.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=773002
Comment 12 Tommi Tervo 2008-02-11 08:05:14 UTC
*** Bug 155443 has been marked as a duplicate of this bug. ***
Comment 13 Andrey 2008-02-11 20:02:06 UTC
When the web shortcut delimiter is set to space, if I use Konqueror's search bar to google for some "keyword" I actually get a page with results for "gg:keyword".

Here's a screenshot which may explain it better: http://img153.imageshack.us/img153/9326/86138391cw5.png

Should I post a new bug?
Comment 14 Gabriel Ambuehl 2008-02-11 20:09:42 UTC
Do you perchance have Google as default search engine set?
Comment 15 Andrey 2008-02-11 20:34:24 UTC
Gabriel, yes, Google is configured as default search engine. If I set web shortcut delimiter to "colon", then Konqueror search bar works as expected, without adding "gg:" infront of the search keyword.
Comment 16 Skander Morgenthaler 2008-02-28 10:37:51 UTC
Has the fix been backported to the 4.0 branch yet? With r779633 konqueror still does not remember the new shortcut delimiter and always defaults to the colon.
Comment 17 Ivo 2008-03-29 03:39:48 UTC
This bug is still present in 4.0.2 (packages from Kubuntu 8.04 beta).
Comment 18 Bastien Jansen 2008-07-29 19:13:46 UTC
Created attachment 26480 [details]
Workaround for KDE4.1

I confirm this bug is still present in KDE4.1 when the space keyword delimiter
is used. The attached patch should fix it.
Comment 19 Teodosiy Kirilov 2008-10-04 16:16:33 UTC
As of KDE 4.1.2 this bug is still present.
It seems that KConfig.readEntry() won't parse space as an int :-)

--- cut ---
Index: konq-plugins/searchbar/searchbar.cpp
===================================================================
--- konq-plugins/searchbar/searchbar.cpp        (revision 867761)
+++ konq-plugins/searchbar/searchbar.cpp        (working copy)
@@ -103,7 +103,7 @@
     if (s_delimiter == 0) {
         KConfig _config("kuriikwsfilterrc", KConfig::NoGlobals);
         KConfigGroup config(&_config, "General");
-        s_delimiter = config.readEntry("KeywordDelimiter", int(':'));
+        s_delimiter = config.readEntry("KeywordDelimiter", QString(":")).at(0);
     }
     return s_delimiter;
 }
--- cut ---
Comment 20 gapon 2009-02-04 06:10:28 UTC
Is this bug fixed n KDE 4.2.0? I'm asking because I can reproduce it... Thanks.
Comment 21 Teodosiy Kirilov 2009-02-06 21:39:49 UTC
On Kubuntu 8.10 with kde 4.2.0 I had to set the delimiter again (in the settings gui). So it's actually fixed, but needs