Make it possible to use SPACE as delimiter, like in KDE3 (we had the GUI, it just did not work). ":" works, even if SPACE is selected, so krunner will still work.

BUG:153142

svn path=/trunk/KDE/kdebase/runtime/; revision=773002