kurifilter-plugins/ikws/kuriikwsfiltereng.cpp
@@ -523,7 +523,7 @@ void KURISearchFilterEngine::loadConfig()
   KConfig config( name() + "rc", KConfig::NoGlobals );
   KConfigGroup group = config.group( "General" );
 
-  m_cKeywordDelimiter = group.readEntry("KeywordDelimiter", int(':'));
+  m_cKeywordDelimiter = QString(group.readEntry("KeywordDelimiter", ":")).at(0).toLatin1();
   m_bWebShortcutsEnabled = group.readEntry("EnableWebShortcuts", true);
   m_defaultSearchEngine = group.readEntry("DefaultSearchEngine");
   m_bVerbose = group.readEntry("Verbose", false);
